feature-007: updating appointment controllers